--- a/Project/templates/music.html
+++ b/Project/templates/music.html
@@ -5,11 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
-        
+
         .background-banner {
             background-image: linear-gradient(45deg,
                     rgb(51 43 43 / 75%),
@@ -22,13 +20,17 @@
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
 
 <body data-bs-theme="dark">
     <div class="background-banner">
         <nav class="navbar border-bottom border-bottom-dark d-flex justify-content-space-between" data-bs-theme="dark">
             <div class="ms-3">
-                <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/images/sparta-logo.svg" alt="">
+                <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/images/sparta-logo.svg"
+                    alt="">
             </div>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -39,10 +41,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" aria-current="page" href="{{url_for('home')}}">Home</a>
+                                <a class="nav-link text-white" aria-current="page" href="{{ url_for('home')}}">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="{{url_for('music')}}">Music</a>
+                                <a class="nav-link text-white" href="{{ url_for('music')}}">Music</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="#">Album</a>
@@ -55,7 +57,7 @@
                 </div>
             </nav>
         </nav>
-    
+
         <div class="px-4 py-5 my-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">멜로디 쉐어</h1>
             <div class="col-lg-6 mx-auto">
@@ -75,8 +77,8 @@
                 </div>
             </div>
         </div>
-    
-    
+
+
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -86,25 +88,25 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form>
+                        <form action="{{url_for('music_create')}}" method="GET">
                             <div class="mb-3">
                                 <label for="exampleInputEmail1" class="form-label">유저</label>
                                 <input type="text" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                    aria-describedby="emailHelp" name="username">
                                 <div id="emailHelp" class="form-text">사용자(추천인)의 이름을 넣어주세요.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">노래 제목</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="exampleInputPassword1" name="title">
                                 <div id="emailHelp" class="form-text">좋아하는 노래 제목을 넣어주세요.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">가수</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="exampleInputPassword1" name="artist">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">앨범 커버URL</label>
-                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="exampleInputPassword1" name="image_url">
                             </div>
                             <button type="submit" class="btn btn-danger">Submit</button>
                         </form>
@@ -112,67 +114,42 @@
                 </div>
             </div>
         </div>
-    
+
         <div class="row row-cols-1 row-cols-md-4 g-4 mx-auto w-75 pb-5">
+            {% for song in data %}
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
+                    <img src="{{ song.image_url }}"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Love Dive</h5>
-                        <p class="card-text">아이브(IVE)</p>
-                        <p class="card-text">추천 by 최지웅</p>
+                        <h5 class="card-title">{{ song.title }}</h5>
+                        <p class="card-text">{{ song.artist }}</p>
+                        <p class="card-text">추천 by {{ song.username }}</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Love Dive</h5>
-                        <p class="card-text">아이브(IVE)</p>
-                        <p class="card-text">추천 by 최지웅</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Love Dive</h5>
-                        <p class="card-text">아이브(IVE)</p>
-                        <p class="card-text">추천 by 최지웅</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Love Dive</h5>
-                        <p class="card-text">아이브(IVE)</p>
-                        <p class="card-text">추천 by 최지웅</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
+
+
         </div>
+        <footer>
     </div>
 
     <div class="container">
         <footer>
-          <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-            <p>© 2023 Company, Inc. All rights reserved.</p>
-            <ul class="list-unstyled d-flex">
-              <li class="ms-3"><a class="link-body-emphasis" href="https://www.youtube.com/@SpartaCodingClub"><i class="bi bi-youtube"></i></a></li>
-              <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/spartacodingclub/"><i class="bi bi-instagram"></i></a></li>
-              <li class="ms-3"><a class="link-body-emphasis" href="https://spartacodingclub.kr/blog"><i class="bi bi-postcard"></i></a></li>
-            </ul>
-          </div>
+            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>© 2023 Company, Inc. All rights reserved.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-body-emphasis" href="https://www.youtube.com/@SpartaCodingClub"><i
+                                class="bi bi-youtube"></i></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/spartacodingclub/"><i
+                                class="bi bi-instagram"></i></a></li>
+                    <li class="ms-3"><a class="link-body-emphasis" href="https://spartacodingclub.kr/blog"><i
+                                class="bi bi-postcard"></i></a></li>
+                </ul>
+            </div>
         </footer>
-      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
